// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`server > GET /v2/swaps/:id > retrieves a DCA swap from an onChain origin in COMPLETED 1`] = `
{
  "brokers": [],
  "dcaParams": {
    "chunkIntervalBlocks": 2,
    "numberOfChunks": 2,
  },
  "destAddress": "cFL8fmgKZcchhtLagBH2GKfsuWxBqUaD5CYE1m7DFb8DBSLJ1",
  "destAsset": "USDT",
  "destChain": "Ethereum",
  "estimatedDurationSeconds": 12,
  "estimatedDurationsSeconds": {
    "swap": 12,
  },
  "fees": [
    {
      "amount": "5000000",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "NETWORK",
    },
  ],
  "fillOrKillParams": {
    "minPrice": "0",
    "refundAddress": "cFL8fmgKZcchhtLagBH2GKfsuWxBqUaD5CYE1m7DFb8DBSLJ1",
    "retryDurationBlocks": 100,
  },
  "lastStatechainUpdateAt": 1640995200000,
  "srcAsset": "USDC",
  "srcChain": "Ethereum",
  "state": "COMPLETED",
  "swap": {
    "dca": {
      "currentChunk": null,
      "executedChunks": 2,
      "lastExecutedChunk": {
        "executedAt": 24738000,
        "executedBlockIndex": "4123-22",
        "inputAmount": "2497500000",
        "outputAmount": "2478844890",
        "retryCount": 0,
        "scheduledAt": 24738000,
        "scheduledBlockIndex": "4123-22",
      },
      "remainingChunks": 0,
    },
    "onChain": {
      "accountId": "cFL8fmgKZcchhtLagBH2GKfsuWxBqUaD5CYE1m7DFb8DBSLJ1",
      "outputAmount": "4970072600",
    },
    "originalInputAmount": "5000000000",
    "remainingInputAmount": "5000000",
    "swappedInputAmount": "4995000000",
    "swappedIntermediateAmount": "0",
    "swappedOutputAmount": "4970072600",
  },
  "swapId": "4",
}
`;

exports[`server > GET /v2/swaps/:id > retrieves a refunded swap from an onChain origin 1`] = `
{
  "brokers": [],
  "destAddress": "cFLBKavxvThwqLWNr7cTwtqhYD6jDqXM31d6QoTLvuK4X78ve",
  "destAsset": "USDC",
  "destChain": "Ethereum",
  "estimatedDurationSeconds": 12,
  "estimatedDurationsSeconds": {
    "swap": 12,
  },
  "fees": [
    {
      "amount": "497747",
      "asset": "USDC",
      "chain": "Solana",
      "type": "REFUND",
    },
  ],
  "fillOrKillParams": {
    "minPrice": "1.00049999999999994493",
    "refundAddress": "cFLBKavxvThwqLWNr7cTwtqhYD6jDqXM31d6QoTLvuK4X78ve",
    "retryDurationBlocks": 7,
  },
  "lastStatechainUpdateAt": 1640995200000,
  "srcAsset": "USDC",
  "srcChain": "Solana",
  "state": "COMPLETED",
  "swap": {
    "onChain": {
      "accountId": "cFLBKavxvThwqLWNr7cTwtqhYD6jDqXM31d6QoTLvuK4X78ve",
      "refundAmount": "9504253",
    },
    "originalInputAmount": "10000000",
    "regular": {
      "inputAmount": "10000000",
      "latestSwapRescheduledAt": 46992672000,
      "latestSwapRescheduledBlockIndex": "7832112-1110",
      "latestSwapRescheduledReason": "PriceImpactLimit",
      "retryCount": 1,
      "scheduledAt": 46992660000,
      "scheduledBlockIndex": "7832110-1146",
    },
    "remainingInputAmount": "10000000",
    "swappedInputAmount": "0",
    "swappedIntermediateAmount": "0",
    "swappedOutputAmount": "0",
  },
  "swapId": "512007",
}
`;

exports[`server > GET /v2/swaps/:id > retrieves a swap from a native swap id 1`] = `
{
  "brokers": [],
  "deposit": {
    "amount": "5000000000000000000",
    "witnessedAt": 552000,
    "witnessedBlockIndex": "92-400",
  },
  "depositChannel": {
    "affiliateBrokers": [],
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1640998260000,
    "fillOrKillParams": {
      "minPrice": "0",
      "refundAddress": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
      "retryDurationBlocks": 100,
    },
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Assethub",
  "estimatedDurationSeconds": 127.5,
  "estimatedDurationsSeconds": {
    "deposit": 24,
    "egress": 91.5,
    "swap": 12,
  },
  "fees": [
    {
      "amount": "50000000350000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "INGRESS",
    },
  ],
  "fillOrKillParams": {
    "minPrice": "0",
    "refundAddress": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
    "retryDurationBlocks": 100,
  },
  "lastStatechainUpdateAt": 1640995200000,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "SWAPPING",
  "swap": {
    "originalInputAmount": "4999949999999650000",
    "regular": {
      "inputAmount": "4999949999999650000",
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
    },
    "remainingInputAmount": "4999949999999650000",
    "swappedInputAmount": "0",
    "swappedIntermediateAmount": "0",
    "swappedOutputAmount": "0",
  },
}
`;

exports[`server > GET /v2/swaps/:id > retrieves a swap from a solana case-insensitive tx ref 1`] = `
{
  "brokers": [],
  "deposit": {
    "amount": "5000000000000000000",
    "txRef": "qRPnr195EppRTtmjiTUu94VDANaY2UtveuyBeyR5hMTjbqzDAtdNv8N4miayUNhkbQdgzn8TfYhEXHJ8xHjkHYp",
    "witnessedAt": 552000,
    "witnessedBlockIndex": "92-400",
  },
  "depositChannel": {
    "affiliateBrokers": [],
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1640998260000,
    "fillOrKillParams": {
      "minPrice": "0",
      "refundAddress": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
      "retryDurationBlocks": 100,
    },
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Assethub",
  "estimatedDurationSeconds": 127.5,
  "estimatedDurationsSeconds": {
    "deposit": 24,
    "egress": 91.5,
    "swap": 12,
  },
  "fees": [
    {
      "amount": "50000000350000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "INGRESS",
    },
  ],
  "fillOrKillParams": {
    "minPrice": "0",
    "refundAddress": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
    "retryDurationBlocks": 100,
  },
  "lastStatechainUpdateAt": 1640995200000,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "SWAPPING",
  "swap": {
    "originalInputAmount": "4999949999999650000",
    "regular": {
      "inputAmount": "4999949999999650000",
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
    },
    "remainingInputAmount": "4999949999999650000",
    "swappedInputAmount": "0",
    "swappedIntermediateAmount": "0",
    "swappedOutputAmount": "0",
  },
}
`;

exports[`server > GET /v2/swaps/:id > retrieves a swap from a vault origin 1`] = `
{
  "brokers": [
    {
      "account": "cFMTNSQQVfBo2HqtekvhLPfZY764kuJDVFG1EvnnDGYxc3LRW",
      "commissionBps": 10,
    },
  ],
  "deposit": {
    "amount": "4999949999999650000",
    "txRef": "0xb2dcb9ce8d50f0ab869995fee8482bcf304ffcfe5681ca748f90e34c0ad7b241",
    "witnessedAt": 552000,
    "witnessedBlockIndex": "92-398",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Assethub",
  "estimatedDurationSeconds": 127.5,
  "estimatedDurationsSeconds": {
    "deposit": 24,
    "egress": 91.5,
    "swap": 12,
  },
  "fees": [
    {
      "amount": "4556242",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "NETWORK",
    },
    {
      "amount": "45516860",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "BROKER",
    },
  ],
  "lastStatechainUpdateAt": 1640995200000,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "SWAPPING",
  "swap": {
    "originalInputAmount": "4999949999999650000",
    "regular": {
      "executedAt": 564000,
      "executedBlockIndex": "94-594",
      "inputAmount": "4999949999999650000",
      "intermediateAmount": "4506169140",
      "outputAmount": "4192904666034",
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
    },
    "remainingInputAmount": "0",
    "swappedInputAmount": "4999949999999650000",
    "swappedIntermediateAmount": "4506169140",
    "swappedOutputAmount": "4192904666034",
  },
}
`;

exports[`server > GET /v2/swaps/:id > retrieves a swap from a vault origin in COMPLETED 1`] = `
{
  "brokers": [],
  "deposit": {
    "amount": "4999949999999650000",
    "txRef": "0xb2dcb9ce8d50f0ab869995fee8482bcf304ffcfe5681ca748f90e34c0ad7b241",
    "witnessedAt": 552000,
    "witnessedBlockIndex": "92-398",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Assethub",
  "estimatedDurationSeconds": 127.5,
  "estimatedDurationsSeconds": {
    "deposit": 24,
    "egress": 91.5,
    "swap": 12,
  },
  "fees": [
    {
      "amount": "4556242",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "NETWORK",
    },
    {
      "amount": "45516860",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "BROKER",
    },
    {
      "amount": "197450000",
      "asset": "DOT",
      "chain": "Assethub",
      "type": "EGRESS",
    },
  ],
  "lastStatechainUpdateAt": 1640995200000,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "COMPLETED",
  "swap": {
    "livePriceExecutionDeltaPercentage": 1,
    "originalInputAmount": "4999949999999650000",
    "regular": {
      "executedAt": 564000,
      "executedBlockIndex": "94-594",
      "inputAmount": "4999949999999650000",
      "intermediateAmount": "4506169140",
      "outputAmount": "4192904666034",
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
    },
    "remainingInputAmount": "0",
    "swappedInputAmount": "4999949999999650000",
    "swappedIntermediateAmount": "4506169140",
    "swappedOutputAmount": "4192904666034",
  },
  "swapEgress": {
    "amount": "4192707216034",
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-595",
    "txRef": "104-2",
    "witnessedAt": 624000,
    "witnessedBlockIndex": "104-7",
  },
}
`;

exports[`server > GET /v2/swaps/:id > retrieves a swap from an Internal (Liquidation) origin in COMPLETED 1`] = `
{
  "brokers": [],
  "destAsset": "DOT",
  "destChain": "Assethub",
  "estimatedDurationSeconds": 12,
  "estimatedDurationsSeconds": {
    "swap": 12,
  },
  "fees": [
    {
      "amount": "4556242",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "NETWORK",
    },
    {
      "amount": "45516860",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "BROKER",
    },
  ],
  "fillOrKillParams": {
    "maxOraclePriceSlippage": 500,
    "minPrice": "0",
  },
  "lastStatechainUpdateAt": 1640995200000,
  "liquidation": {
    "accountId": "cFNzKSS48cZ1xQmdub2ykc2LUc5UZS2YjLaZBUvmxoXHjMMVh",
    "completedAt": 564000,
    "completedAtBlockIndex": "94-596",
    "loanId": "1",
    "outputAmount": "4192904666034",
    "refundAmount": "0",
  },
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "state": "COMPLETED",
  "swap": {
    "livePriceExecutionDeltaPercentage": 1,
    "originalInputAmount": "4999949999999650000",
    "regular": {
      "executedAt": 564000,
      "executedBlockIndex": "94-594",
      "inputAmount": "4999949999999650000",
      "intermediateAmount": "4506169140",
      "outputAmount": "4192904666034",
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
    },
    "remainingInputAmount": "0",
    "swappedInputAmount": "4999949999999650000",
    "swappedIntermediateAmount": "4506169140",
    "swappedOutputAmount": "4192904666034",
  },
  "swapId": "368",
}
`;

exports[`server > GET /v2/swaps/:id > retrieves a swap from an Internal (Liquidation) origin in SWAPPING 1`] = `
{
  "brokers": [],
  "destAsset": "DOT",
  "destChain": "Assethub",
  "estimatedDurationSeconds": 12,
  "estimatedDurationsSeconds": {
    "swap": 12,
  },
  "fees": [],
  "fillOrKillParams": {
    "maxOraclePriceSlippage": 500,
    "minPrice": "0",
  },
  "lastStatechainUpdateAt": 1640995200000,
  "liquidation": {
    "accountId": "cFNzKSS48cZ1xQmdub2ykc2LUc5UZS2YjLaZBUvmxoXHjMMVh",
    "loanId": "1",
  },
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "state": "SWAPPING",
  "swap": {
    "originalInputAmount": "4999949999999650000",
    "regular": {
      "inputAmount": "4999949999999650000",
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
    },
    "remainingInputAmount": "4999949999999650000",
    "swappedInputAmount": "0",
    "swappedIntermediateAmount": "0",
    "swappedOutputAmount": "0",
  },
  "swapId": "368",
}
`;

exports[`server > GET /v2/swaps/:id > retrieves a swap from an onChain origin in COMPLETED 1`] = `
{
  "brokers": [],
  "destAddress": "cFNzKSS48cZ1xQmdub2ykc2LUc5UZS2YjLaZBUvmxoXHjMMVh",
  "destAsset": "DOT",
  "destChain": "Assethub",
  "estimatedDurationSeconds": 12,
  "estimatedDurationsSeconds": {
    "swap": 12,
  },
  "fees": [
    {
      "amount": "4556242",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "NETWORK",
    },
  ],
  "fillOrKillParams": {
    "minPrice": "0",
    "refundAddress": "cFNzKSS48cZ1xQmdub2ykc2LUc5UZS2YjLaZBUvmxoXHjMMVh",
    "retryDurationBlocks": 100,
  },
  "lastStatechainUpdateAt": 1640995200000,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "state": "COMPLETED",
  "swap": {
    "livePriceExecutionDeltaPercentage": 1,
    "onChain": {
      "accountId": "cFNzKSS48cZ1xQmdub2ykc2LUc5UZS2YjLaZBUvmxoXHjMMVh",
    },
    "originalInputAmount": "4999949999999650000",
    "regular": {
      "executedAt": 564000,
      "executedBlockIndex": "94-594",
      "inputAmount": "4999949999999650000",
      "intermediateAmount": "4506169140",
      "outputAmount": "4192904666034",
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
    },
    "remainingInputAmount": "0",
    "swappedInputAmount": "4999949999999650000",
    "swappedIntermediateAmount": "4506169140",
    "swappedOutputAmount": "4192904666034",
  },
  "swapId": "368",
}
`;

exports[`server > GET /v2/swaps/:id > retrieves a swap from an onChain origin in SWAPPING 1`] = `
{
  "brokers": [],
  "destAddress": "cFNzKSS48cZ1xQmdub2ykc2LUc5UZS2YjLaZBUvmxoXHjMMVh",
  "destAsset": "DOT",
  "destChain": "Assethub",
  "estimatedDurationSeconds": 12,
  "estimatedDurationsSeconds": {
    "swap": 12,
  },
  "fees": [],
  "fillOrKillParams": {
    "minPrice": "0",
    "refundAddress": "cFNzKSS48cZ1xQmdub2ykc2LUc5UZS2YjLaZBUvmxoXHjMMVh",
    "retryDurationBlocks": 100,
  },
  "lastStatechainUpdateAt": 1640995200000,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "state": "SWAPPING",
  "swap": {
    "onChain": {
      "accountId": "cFNzKSS48cZ1xQmdub2ykc2LUc5UZS2YjLaZBUvmxoXHjMMVh",
    },
    "originalInputAmount": "4999949999999650000",
    "regular": {
      "inputAmount": "4999949999999650000",
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
    },
    "remainingInputAmount": "4999949999999650000",
    "swappedInputAmount": "0",
    "swappedIntermediateAmount": "0",
    "swappedOutputAmount": "0",
  },
  "swapId": "368",
}
`;

exports[`server > GET /v2/swaps/:id > retrieves a swap in COMPLETED status 1`] = `
{
  "brokers": [],
  "deposit": {
    "amount": "5000000000000000000",
    "witnessedAt": 552000,
    "witnessedBlockIndex": "92-400",
  },
  "depositChannel": {
    "affiliateBrokers": [],
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1640998260000,
    "fillOrKillParams": {
      "minPrice": "0",
      "refundAddress": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
      "retryDurationBlocks": 100,
    },
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Assethub",
  "estimatedDurationSeconds": 127.5,
  "estimatedDurationsSeconds": {
    "deposit": 24,
    "egress": 91.5,
    "swap": 12,
  },
  "fees": [
    {
      "amount": "4556242",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "NETWORK",
    },
    {
      "amount": "45516860",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "BROKER",
    },
    {
      "amount": "50000000350000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "INGRESS",
    },
    {
      "amount": "197450000",
      "asset": "DOT",
      "chain": "Assethub",
      "type": "EGRESS",
    },
  ],
  "fillOrKillParams": {
    "minPrice": "0",
    "refundAddress": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
    "retryDurationBlocks": 100,
  },
  "lastStatechainUpdateAt": 1640995200000,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "COMPLETED",
  "swap": {
    "livePriceExecutionDeltaPercentage": 1,
    "originalInputAmount": "4999949999999650000",
    "regular": {
      "executedAt": 564000,
      "executedBlockIndex": "94-594",
      "inputAmount": "4999949999999650000",
      "intermediateAmount": "4506169140",
      "outputAmount": "4192904666034",
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
    },
    "remainingInputAmount": "0",
    "swappedInputAmount": "4999949999999650000",
    "swappedIntermediateAmount": "4506169140",
    "swappedOutputAmount": "4192904666034",
  },
  "swapEgress": {
    "amount": "4192707216034",
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-595",
    "txRef": "104-2",
    "witnessedAt": 624000,
    "witnessedBlockIndex": "104-7",
  },
}
`;

exports[`server > GET /v2/swaps/:id > retrieves a swap in COMPLETED status by tx hash 1`] = `
{
  "brokers": [],
  "deposit": {
    "amount": "5000000000000000000",
    "txRef": "0xdeadbeef",
    "witnessedAt": 552000,
    "witnessedBlockIndex": "92-400",
  },
  "depositChannel": {
    "affiliateBrokers": [],
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1640998260000,
    "fillOrKillParams": {
      "minPrice": "0",
      "refundAddress": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
      "retryDurationBlocks": 100,
    },
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Assethub",
  "estimatedDurationSeconds": 127.5,
  "estimatedDurationsSeconds": {
    "deposit": 24,
    "egress": 91.5,
    "swap": 12,
  },
  "fees": [
    {
      "amount": "4556242",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "NETWORK",
    },
    {
      "amount": "45516860",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "BROKER",
    },
    {
      "amount": "50000000350000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "INGRESS",
    },
    {
      "amount": "197450000",
      "asset": "DOT",
      "chain": "Assethub",
      "type": "EGRESS",
    },
  ],
  "fillOrKillParams": {
    "minPrice": "0",
    "refundAddress": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
    "retryDurationBlocks": 100,
  },
  "lastStatechainUpdateAt": 1640995200000,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "COMPLETED",
  "swap": {
    "livePriceExecutionDeltaPercentage": 1,
    "originalInputAmount": "4999949999999650000",
    "regular": {
      "executedAt": 564000,
      "executedBlockIndex": "94-594",
      "inputAmount": "4999949999999650000",
      "intermediateAmount": "4506169140",
      "outputAmount": "4192904666034",
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
    },
    "remainingInputAmount": "0",
    "swappedInputAmount": "4999949999999650000",
    "swappedIntermediateAmount": "4506169140",
    "swappedOutputAmount": "4192904666034",
  },
  "swapEgress": {
    "amount": "4192707216034",
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-595",
    "txRef": "104-2",
    "witnessedAt": 624000,
    "witnessedBlockIndex": "104-7",
  },
}
`;

exports[`server > GET /v2/swaps/:id > retrieves a swap in COMPLETED status by tx hash 2`] = `
{
  "brokers": [],
  "deposit": {
    "amount": "5000000000000000000",
    "txRef": "0xdeadbeef",
    "witnessedAt": 552000,
    "witnessedBlockIndex": "92-400",
  },
  "depositChannel": {
    "affiliateBrokers": [],
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1640998260000,
    "fillOrKillParams": {
      "minPrice": "0",
      "refundAddress": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
      "retryDurationBlocks": 100,
    },
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Assethub",
  "estimatedDurationSeconds": 127.5,
  "estimatedDurationsSeconds": {
    "deposit": 24,
    "egress": 91.5,
    "swap": 12,
  },
  "fees": [
    {
      "amount": "4556242",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "NETWORK",
    },
    {
      "amount": "45516860",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "BROKER",
    },
    {
      "amount": "50000000350000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "INGRESS",
    },
    {
      "amount": "197450000",
      "asset": "DOT",
      "chain": "Assethub",
      "type": "EGRESS",
    },
  ],
  "fillOrKillParams": {
    "minPrice": "0",
    "refundAddress": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
    "retryDurationBlocks": 100,
  },
  "lastStatechainUpdateAt": 1640995200000,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "COMPLETED",
  "swap": {
    "livePriceExecutionDeltaPercentage": 1,
    "originalInputAmount": "4999949999999650000",
    "regular": {
      "executedAt": 564000,
      "executedBlockIndex": "94-594",
      "inputAmount": "4999949999999650000",
      "intermediateAmount": "4506169140",
      "outputAmount": "4192904666034",
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
    },
    "remainingInputAmount": "0",
    "swappedInputAmount": "4999949999999650000",
    "swappedIntermediateAmount": "4506169140",
    "swappedOutputAmount": "4192904666034",
  },
  "swapEgress": {
    "amount": "4192707216034",
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-595",
    "txRef": "104-2",
    "witnessedAt": 624000,
    "witnessedBlockIndex": "104-7",
  },
}
`;

exports[`server > GET /v2/swaps/:id > retrieves a swap in SENDING status 1`] = `
{
  "brokers": [],
  "deposit": {
    "amount": "5000000000000000000",
    "witnessedAt": 552000,
    "witnessedBlockIndex": "92-400",
  },
  "depositChannel": {
    "affiliateBrokers": [],
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1640998260000,
    "fillOrKillParams": {
      "minPrice": "0",
      "refundAddress": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
      "retryDurationBlocks": 100,
    },
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Assethub",
  "estimatedDurationSeconds": 127.5,
  "estimatedDurationsSeconds": {
    "deposit": 24,
    "egress": 91.5,
    "swap": 12,
  },
  "fees": [
    {
      "amount": "4556242",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "NETWORK",
    },
    {
      "amount": "45516860",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "BROKER",
    },
    {
      "amount": "50000000350000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "INGRESS",
    },
    {
      "amount": "197450000",
      "asset": "DOT",
      "chain": "Assethub",
      "type": "EGRESS",
    },
  ],
  "fillOrKillParams": {
    "minPrice": "0",
    "refundAddress": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
    "retryDurationBlocks": 100,
  },
  "lastStatechainUpdateAt": 1640995200000,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "SENDING",
  "swap": {
    "livePriceExecutionDeltaPercentage": 1,
    "originalInputAmount": "4999949999999650000",
    "regular": {
      "executedAt": 564000,
      "executedBlockIndex": "94-594",
      "inputAmount": "4999949999999650000",
      "intermediateAmount": "4506169140",
      "outputAmount": "4192904666034",
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
    },
    "remainingInputAmount": "0",
    "swappedInputAmount": "4999949999999650000",
    "swappedIntermediateAmount": "4506169140",
    "swappedOutputAmount": "4192904666034",
  },
  "swapEgress": {
    "amount": "4192707216034",
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-595",
  },
}
`;

exports[`server > GET /v2/swaps/:id > retrieves a swap in SENT status 1`] = `
{
  "brokers": [],
  "deposit": {
    "amount": "5000000000000000000",
    "witnessedAt": 552000,
    "witnessedBlockIndex": "92-400",
  },
  "depositChannel": {
    "affiliateBrokers": [],
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1640998260000,
    "fillOrKillParams": {
      "minPrice": "0",
      "refundAddress": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
      "retryDurationBlocks": 100,
    },
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Assethub",
  "estimatedDurationSeconds": 127.5,
  "estimatedDurationsSeconds": {
    "deposit": 24,
    "egress": 91.5,
    "swap": 12,
  },
  "fees": [
    {
      "amount": "4556242",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "NETWORK",
    },
    {
      "amount": "45516860",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "BROKER",
    },
    {
      "amount": "50000000350000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "INGRESS",
    },
    {
      "amount": "197450000",
      "asset": "DOT",
      "chain": "Assethub",
      "type": "EGRESS",
    },
  ],
  "fillOrKillParams": {
    "minPrice": "0",
    "refundAddress": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
    "retryDurationBlocks": 100,
  },
  "lastStatechainUpdateAt": 1640995200000,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "SENT",
  "swap": {
    "livePriceExecutionDeltaPercentage": 1,
    "originalInputAmount": "4999949999999650000",
    "regular": {
      "executedAt": 564000,
      "executedBlockIndex": "94-594",
      "inputAmount": "4999949999999650000",
      "intermediateAmount": "4506169140",
      "outputAmount": "4192904666034",
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
    },
    "remainingInputAmount": "0",
    "swappedInputAmount": "4999949999999650000",
    "swappedIntermediateAmount": "4506169140",
    "swappedOutputAmount": "4192904666034",
  },
  "swapEgress": {
    "amount": "4192707216034",
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-595",
    "txRef": "0xdeadbeef",
  },
}
`;

exports[`server > GET /v2/swaps/:id > retrieves a swap in SWAPPING status 1`] = `
{
  "brokers": [],
  "deposit": {
    "amount": "5000000000000000000",
    "witnessedAt": 552000,
    "witnessedBlockIndex": "92-400",
  },
  "depositChannel": {
    "affiliateBrokers": [],
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1640998260000,
    "fillOrKillParams": {
      "minPrice": "0",
      "refundAddress": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
      "retryDurationBlocks": 100,
    },
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Assethub",
  "estimatedDurationSeconds": 127.5,
  "estimatedDurationsSeconds": {
    "deposit": 24,
    "egress": 91.5,
    "swap": 12,
  },
  "fees": [
    {
      "amount": "50000000350000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "INGRESS",
    },
  ],
  "fillOrKillParams": {
    "minPrice": "0",
    "refundAddress": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
    "retryDurationBlocks": 100,
  },
  "lastStatechainUpdateAt": 1640995200000,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "SWAPPING",
  "swap": {
    "originalInputAmount": "4999949999999650000",
    "regular": {
      "inputAmount": "4999949999999650000",
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
    },
    "remainingInputAmount": "4999949999999650000",
    "swappedInputAmount": "0",
    "swappedIntermediateAmount": "0",
    "swappedOutputAmount": "0",
  },
}
`;

exports[`server > GET /v2/swaps/:id > retrieves a swap in SWAPPING status 2`] = `
{
  "brokers": [],
  "deposit": {
    "amount": "5000000000000000000",
    "witnessedAt": 552000,
    "witnessedBlockIndex": "92-400",
  },
  "depositChannel": {
    "affiliateBrokers": [],
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1640998260000,
    "fillOrKillParams": {
      "minPrice": "0",
      "refundAddress": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
      "retryDurationBlocks": 100,
    },
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Assethub",
  "estimatedDurationSeconds": 127.5,
  "estimatedDurationsSeconds": {
    "deposit": 24,
    "egress": 91.5,
    "swap": 12,
  },
  "fees": [
    {
      "amount": "4556242",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "NETWORK",
    },
    {
      "amount": "45516860",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "BROKER",
    },
    {
      "amount": "50000000350000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "INGRESS",
    },
  ],
  "fillOrKillParams": {
    "minPrice": "0",
    "refundAddress": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
    "retryDurationBlocks": 100,
  },
  "lastStatechainUpdateAt": 1640995200000,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "SWAPPING",
  "swap": {
    "originalInputAmount": "4999949999999650000",
    "regular": {
      "executedAt": 564000,
      "executedBlockIndex": "94-594",
      "inputAmount": "4999949999999650000",
      "intermediateAmount": "4506169140",
      "outputAmount": "4192904666034",
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
    },
    "remainingInputAmount": "0",
    "swappedInputAmount": "4999949999999650000",
    "swappedIntermediateAmount": "4506169140",
    "swappedOutputAmount": "4192904666034",
  },
}
`;

exports[`server > GET /v2/swaps/:id > retrieves a swap in SWAPPING status with a tx ref 1`] = `
{
  "brokers": [],
  "deposit": {
    "amount": "5000000000000000000",
    "txRef": "0xa2d5df86c6ec123283eb052c598a0f4b650367a81ad141b9ff3adb0286a86c17",
    "witnessedAt": 552000,
    "witnessedBlockIndex": "92-400",
  },
  "depositChannel": {
    "affiliateBrokers": [],
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1640998260000,
    "fillOrKillParams": {
      "minPrice": "0",
      "refundAddress": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
      "retryDurationBlocks": 100,
    },
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Assethub",
  "estimatedDurationSeconds": 127.5,
  "estimatedDurationsSeconds": {
    "deposit": 24,
    "egress": 91.5,
    "swap": 12,
  },
  "fees": [
    {
      "amount": "50000000350000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "INGRESS",
    },
  ],
  "fillOrKillParams": {
    "minPrice": "0",
    "refundAddress": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
    "retryDurationBlocks": 100,
  },
  "lastStatechainUpdateAt": 1640995200000,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "SWAPPING",
  "swap": {
    "originalInputAmount": "4999949999999650000",
    "regular": {
      "inputAmount": "4999949999999650000",
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
    },
    "remainingInputAmount": "4999949999999650000",
    "swappedInputAmount": "0",
    "swappedIntermediateAmount": "0",
    "swappedOutputAmount": "0",
  },
}
`;

exports[`server > GET /v2/swaps/:id > retrieves a swap with FillOrKillParams in COMPLETED 1`] = `
{
  "brokers": [],
  "deposit": {
    "amount": "5000000000000000000",
    "witnessedAt": 552000,
    "witnessedBlockIndex": "92-400",
  },
  "depositChannel": {
    "affiliateBrokers": [],
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1640998260000,
    "fillOrKillParams": {
      "minPrice": "29387358770557187699218413430556141945466.638919302188",
      "refundAddress": "0x541f563237a309b3a61e33bdf07a8930bdba8d99",
      "retryDurationBlocks": 15,
    },
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Assethub",
  "estimatedDurationSeconds": 127.5,
  "estimatedDurationsSeconds": {
    "deposit": 24,
    "egress": 91.5,
    "swap": 12,
  },
  "fees": [
    {
      "amount": "50000000350000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "INGRESS",
    },
    {
      "amount": "105000000490000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "EGRESS",
    },
    {
      "amount": "2658298",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "REFUND",
    },
  ],
  "fillOrKillParams": {
    "minPrice": "29387358770557187699218413430556141945466.638919302188",
    "refundAddress": "0x541f563237a309b3a61e33bdf07a8930bdba8d99",
    "retryDurationBlocks": 15,
  },
  "lastStatechainUpdateAt": 1640995200000,
  "refundEgress": {
    "amount": "999844999999160000",
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-594",
    "txRef": "0xd2398250c9fa869f0eb7659015549ed46178c95cedd444c3539f655068f6a7d9",
    "witnessedAt": 624000,
    "witnessedBlockIndex": "104-7",
  },
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "COMPLETED",
  "swap": {
    "originalInputAmount": "4999949999999650000",
    "regular": {
      "inputAmount": "4999949999999650000",
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
    },
    "remainingInputAmount": "4999949999999650000",
    "swappedInputAmount": "0",
    "swappedIntermediateAmount": "0",
    "swappedOutputAmount": "0",
  },
  "swapId": "368",
}
`;

exports[`server > GET /v2/swaps/:id > retrieves boost details when channel swap was boosted 1`] = `
{
  "boost": {
    "boostedAt": 552000,
    "boostedBlockIndex": "92-400",
    "effectiveBoostFeeBps": 5,
    "maxBoostFeeBps": 7,
  },
  "brokers": [],
  "deposit": {
    "amount": "5000000000000000000",
    "witnessedAt": 552000,
    "witnessedBlockIndex": "92-400",
  },
  "depositChannel": {
    "affiliateBrokers": [],
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1640998260000,
    "fillOrKillParams": {
      "minPrice": "0",
      "refundAddress": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
      "retryDurationBlocks": 100,
    },
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Assethub",
  "estimatedDurationSeconds": 127.5,
  "estimatedDurationsSeconds": {
    "deposit": 24,
    "egress": 91.5,
    "swap": 12,
  },
  "fees": [
    {
      "amount": "2500000000000000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "BOOST",
    },
    {
      "amount": "50000000350000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "INGRESS",
    },
  ],
  "fillOrKillParams": {
    "minPrice": "0",
    "refundAddress": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
    "retryDurationBlocks": 100,
  },
  "lastStatechainUpdateAt": 1640995200000,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "SWAPPING",
  "swap": {
    "originalInputAmount": "4999949999999650000",
    "regular": {
      "inputAmount": "4999949999999650000",
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
    },
    "remainingInputAmount": "4999949999999650000",
    "swappedInputAmount": "0",
    "swappedIntermediateAmount": "0",
    "swappedOutputAmount": "0",
  },
  "swapId": "368",
}
`;

exports[`server > GET /v2/swaps/:id > retrieves boost details when vault swap was boosted 1`] = `
{
  "boost": {
    "boostedAt": 552000,
    "boostedBlockIndex": "92-400",
    "effectiveBoostFeeBps": 5,
    "maxBoostFeeBps": 7,
  },
  "brokers": [],
  "deposit": {
    "amount": "5000000000000000000",
    "txRef": "41b2d70a4ce3908f74ca8156fefc4f30cf2b48e8fe959986abf0508dceb9dcb2",
    "witnessedAt": 552000,
    "witnessedBlockIndex": "92-400",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Assethub",
  "estimatedDurationSeconds": 127.5,
  "estimatedDurationsSeconds": {
    "deposit": 24,
    "egress": 91.5,
    "swap": 12,
  },
  "fees": [
    {
      "amount": "2500000000000000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "BOOST",
    },
    {
      "amount": "50000000350000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "INGRESS",
    },
  ],
  "lastStatechainUpdateAt": 1640995200000,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "SWAPPING",
  "swap": {
    "originalInputAmount": "4999949999999650000",
    "regular": {
      "inputAmount": "4999949999999650000",
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
    },
    "remainingInputAmount": "4999949999999650000",
    "swappedInputAmount": "0",
    "swappedIntermediateAmount": "0",
    "swappedOutputAmount": "0",
  },
  "swapId": "368",
}
`;

exports[`server > GET /v2/swaps/:id > retrieves multiple DCA swaps in COMPLETED 1`] = `
{
  "brokers": [],
  "dcaParams": {
    "chunkIntervalBlocks": 3,
    "numberOfChunks": 10,
  },
  "deposit": {
    "amount": "10000000000000000000",
    "witnessedAt": 552000,
    "witnessedBlockIndex": "92-400",
  },
  "depositChannel": {
    "affiliateBrokers": [],
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "dcaParams": {
      "chunkIntervalBlocks": 3,
      "numberOfChunks": 10,
    },
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1640998260000,
    "fillOrKillParams": {
      "minPrice": "0",
      "refundAddress": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
      "retryDurationBlocks": 100,
    },
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Assethub",
  "estimatedDurationSeconds": 127.5,
  "estimatedDurationsSeconds": {
    "deposit": 24,
    "egress": 91.5,
    "swap": 12,
  },
  "fees": [
    {
      "amount": "9112484",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "NETWORK",
    },
    {
      "amount": "91033720",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "BROKER",
    },
    {
      "amount": "50000000350000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "INGRESS",
    },
    {
      "amount": "197450000",
      "asset": "DOT",
      "chain": "Assethub",
      "type": "EGRESS",
    },
  ],
  "fillOrKillParams": {
    "minPrice": "0",
    "refundAddress": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
    "retryDurationBlocks": 100,
  },
  "lastStatechainUpdateAt": 1640995200000,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "COMPLETED",
  "swap": {
    "dca": {
      "currentChunk": null,
      "executedChunks": 2,
      "lastExecutedChunk": {
        "executedAt": 564000,
        "executedBlockIndex": "94-594",
        "inputAmount": "4999949999999650000",
        "intermediateAmount": "4506169140",
        "outputAmount": "4192904666034",
        "retryCount": 0,
        "scheduledAt": 552000,
        "scheduledBlockIndex": "92-399",
      },
      "remainingChunks": 8,
    },
    "livePriceExecutionDeltaPercentage": 1,
    "originalInputAmount": "9999899999999300000",
    "remainingInputAmount": "0",
    "swappedInputAmount": "9999899999999300000",
    "swappedIntermediateAmount": "9012338280",
    "swappedOutputAmount": "8385809332068",
  },
  "swapEgress": {
    "amount": "4192707216034",
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-595",
    "txRef": "104-2",
    "witnessedAt": 624000,
    "witnessedBlockIndex": "104-7",
  },
}
`;

exports[`server > GET /v2/swaps/:id > retrieves multiple DCA swaps in FAILED status if refund egress fails but swap completes 1`] = `
{
  "brokers": [],
  "dcaParams": {
    "chunkIntervalBlocks": 3,
    "numberOfChunks": 10,
  },
  "deposit": {
    "amount": "10000000000000000000",
    "witnessedAt": 552000,
    "witnessedBlockIndex": "92-400",
  },
  "depositChannel": {
    "affiliateBrokers": [],
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "dcaParams": {
      "chunkIntervalBlocks": 3,
      "numberOfChunks": 10,
    },
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1640998260000,
    "fillOrKillParams": {
      "minPrice": "29387358770557187699218413430556141945466.638919302188",
      "refundAddress": "0x541f563237a309b3a61e33bdf07a8930bdba8d99",
      "retryDurationBlocks": 15,
    },
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Assethub",
  "estimatedDurationSeconds": 127.5,
  "estimatedDurationsSeconds": {
    "deposit": 24,
    "egress": 91.5,
    "swap": 12,
  },
  "fees": [
    {
      "amount": "9112484",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "NETWORK",
    },
    {
      "amount": "91033720",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "BROKER",
    },
    {
      "amount": "50000000350000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "INGRESS",
    },
    {
      "amount": "105000000490000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "EGRESS",
    },
    {
      "amount": "2658298",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "REFUND",
    },
    {
      "amount": "197450000",
      "asset": "DOT",
      "chain": "Assethub",
      "type": "EGRESS",
    },
  ],
  "fillOrKillParams": {
    "minPrice": "29387358770557187699218413430556141945466.638919302188",
    "refundAddress": "0x541f563237a309b3a61e33bdf07a8930bdba8d99",
    "retryDurationBlocks": 15,
  },
  "lastStatechainUpdateAt": 1640995200000,
  "refundEgress": {
    "amount": "999844999999160000",
    "failedAt": 624000,
    "failedBlockIndex": "104-1",
    "failure": {
      "failedAt": 624000,
      "failedBlockIndex": "104-1",
      "mode": "REFUND_OUTPUT_TOO_SMALL",
      "reason": {
        "message": "The amount is below the minimum egress amount.",
        "name": "ethereumIngressEgress.BelowEgressDustLimit",
      },
    },
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-594",
  },
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "FAILED",
  "swap": {
    "dca": {
      "currentChunk": null,
      "executedChunks": 2,
      "lastExecutedChunk": {
        "executedAt": 564000,
        "executedBlockIndex": "94-594",
        "inputAmount": "4999949999999650000",
        "intermediateAmount": "4506169140",
        "outputAmount": "4192904666034",
        "retryCount": 0,
        "scheduledAt": 552000,
        "scheduledBlockIndex": "92-399",
      },
      "remainingChunks": 8,
    },
    "originalInputAmount": "9999899999999300000",
    "remainingInputAmount": "0",
    "swappedInputAmount": "9999899999999300000",
    "swappedIntermediateAmount": "9012338280",
    "swappedOutputAmount": "8385809332068",
  },
  "swapEgress": {
    "amount": "4192707216034",
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-595",
    "txRef": "104-2",
    "witnessedAt": 624000,
    "witnessedBlockIndex": "104-7",
  },
}
`;

exports[`server > GET /v2/swaps/:id > retrieves multiple DCA swaps in SENDING status 1`] = `
{
  "brokers": [],
  "dcaParams": {
    "chunkIntervalBlocks": 3,
    "numberOfChunks": 10,
  },
  "deposit": {
    "amount": "10000000000000000000",
    "witnessedAt": 552000,
    "witnessedBlockIndex": "92-400",
  },
  "depositChannel": {
    "affiliateBrokers": [],
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "dcaParams": {
      "chunkIntervalBlocks": 3,
      "numberOfChunks": 10,
    },
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1640998260000,
    "fillOrKillParams": {
      "minPrice": "0",
      "refundAddress": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
      "retryDurationBlocks": 100,
    },
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Assethub",
  "estimatedDurationSeconds": 127.5,
  "estimatedDurationsSeconds": {
    "deposit": 24,
    "egress": 91.5,
    "swap": 12,
  },
  "fees": [
    {
      "amount": "9112484",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "NETWORK",
    },
    {
      "amount": "91033720",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "BROKER",
    },
    {
      "amount": "50000000350000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "INGRESS",
    },
    {
      "amount": "197450000",
      "asset": "DOT",
      "chain": "Assethub",
      "type": "EGRESS",
    },
  ],
  "fillOrKillParams": {
    "minPrice": "0",
    "refundAddress": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
    "retryDurationBlocks": 100,
  },
  "lastStatechainUpdateAt": 1640995200000,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "SENDING",
  "swap": {
    "dca": {
      "currentChunk": null,
      "executedChunks": 2,
      "lastExecutedChunk": {
        "executedAt": 564000,
        "executedBlockIndex": "94-594",
        "inputAmount": "4999949999999650000",
        "intermediateAmount": "4506169140",
        "outputAmount": "4192904666034",
        "retryCount": 0,
        "scheduledAt": 552000,
        "scheduledBlockIndex": "92-399",
      },
      "remainingChunks": 8,
    },
    "livePriceExecutionDeltaPercentage": 1,
    "originalInputAmount": "9999899999999300000",
    "remainingInputAmount": "0",
    "swappedInputAmount": "9999899999999300000",
    "swappedIntermediateAmount": "9012338280",
    "swappedOutputAmount": "8385809332068",
  },
  "swapEgress": {
    "amount": "4192707216034",
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-595",
  },
}
`;

exports[`server > GET /v2/swaps/:id > retrieves multiple DCA swaps in SWAPPING status 1`] = `
{
  "brokers": [],
  "dcaParams": {
    "chunkIntervalBlocks": 3,
    "numberOfChunks": 10,
  },
  "deposit": {
    "amount": "10000000000000000000",
    "witnessedAt": 552000,
    "witnessedBlockIndex": "92-400",
  },
  "depositChannel": {
    "affiliateBrokers": [],
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "dcaParams": {
      "chunkIntervalBlocks": 3,
      "numberOfChunks": 10,
    },
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1640998260000,
    "fillOrKillParams": {
      "minPrice": "0",
      "refundAddress": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
      "retryDurationBlocks": 100,
    },
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Assethub",
  "estimatedDurationSeconds": 127.5,
  "estimatedDurationsSeconds": {
    "deposit": 24,
    "egress": 91.5,
    "swap": 12,
  },
  "fees": [
    {
      "amount": "9112484",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "NETWORK",
    },
    {
      "amount": "91033720",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "BROKER",
    },
    {
      "amount": "50000000350000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "INGRESS",
    },
  ],
  "fillOrKillParams": {
    "minPrice": "0",
    "refundAddress": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
    "retryDurationBlocks": 100,
  },
  "lastStatechainUpdateAt": 1640995200000,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "SWAPPING",
  "swap": {
    "dca": {
      "currentChunk": null,
      "executedChunks": 2,
      "lastExecutedChunk": {
        "executedAt": 564000,
        "executedBlockIndex": "94-594",
        "inputAmount": "4999949999999650000",
        "intermediateAmount": "4506169140",
        "outputAmount": "4192904666034",
        "retryCount": 0,
        "scheduledAt": 552000,
        "scheduledBlockIndex": "92-399",
      },
      "remainingChunks": 8,
    },
    "originalInputAmount": "9999899999999300000",
    "remainingInputAmount": "0",
    "swappedInputAmount": "9999899999999300000",
    "swappedIntermediateAmount": "9012338280",
    "swappedOutputAmount": "8385809332068",
  },
  "swapId": "368",
}
`;

exports[`server > GET /v2/swaps/:id > returns ccmParams for swaps initiated via smart contract 1`] = `
{
  "brokers": [],
  "ccmParams": {
    "gasBudget": "200000000000000",
    "message": "0x000000000000000000000000000000000000000000000000000000000000004000000000000000000000000067ff09c184d8e9e7b90c5187ed04cbfbdba741c8000000000000000000000000000000000000000000000000000000000000000c6461676f61746973686572650000000000000000000000000000000000000000",
  },
  "deposit": {
    "amount": "20000000000000000",
    "txRef": "0x574cfc9a2173fa110a849d0871752587c710b55a5a3e7a6513a8a6118e4e3b00",
    "witnessedAt": 552000,
    "witnessedBlockIndex": "92-398",
  },
  "destAddress": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
  "destAsset": "USDC",
  "destChain": "Arbitrum",
  "estimatedDurationSeconds": 108.52,
  "estimatedDurationsSeconds": {
    "deposit": 6.39,
    "egress": 90.13,
    "swap": 12,
  },
  "fees": [
    {
      "amount": "4556242",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "NETWORK",
    },
    {
      "amount": "45516860",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "BROKER",
    },
    {
      "amount": "6364636424444258",
      "asset": "ETH",
      "chain": "Arbitrum",
      "type": "EGRESS",
    },
  ],
  "lastStatechainUpdateAt": 1640995200000,
  "srcAsset": "ETH",
  "srcChain": "Arbitrum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "SENDING",
  "swap": {
    "originalInputAmount": "20000000000000000",
    "regular": {
      "executedAt": 564000,
      "executedBlockIndex": "94-594",
      "inputAmount": "4999949999999650000",
      "intermediateAmount": "4506169140",
      "outputAmount": "4192904666034",
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
    },
    "remainingInputAmount": "-4979949999999650000",
    "swappedInputAmount": "4999949999999650000",
    "swappedIntermediateAmount": "4506169140",
    "swappedOutputAmount": "4192904666034",
  },
  "swapEgress": {
    "amount": "150000000",
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-595",
  },
  "swapId": "368",
}
`;

exports[`server > GET /v2/swaps/:id > returns the vault swap details in RECEIVING status 1`] = `
{
  "boost": {
    "maxBoostFeeBps": 5,
  },
  "brokers": [
    {
      "account": "cFHsUq1uK5opJudRDczhdPVj6LGoVTqYsfj71tbHfKsTAzkJJ",
      "commissionBps": 10,
    },
    {
      "account": "cFHtoB6DrnqUVY4DwMHCVCtgCLsiHvv98oGw8k66tazF2ToFv",
      "commissionBps": 10,
    },
  ],
  "ccmParams": {
    "gasBudget": "12345",
    "message": "48454c4c4f",
  },
  "dcaParams": {
    "chunkIntervalBlocks": 100,
    "numberOfChunks": 5,
  },
  "deposit": {
    "amount": "100",
    "txConfirmations": 1,
    "txRef": "0x1234",
  },
  "destAddress": "0xcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcf",
  "destAsset": "FLIP",
  "destChain": "Ethereum",
  "estimatedDurationSeconds": 132,
  "estimatedDurationsSeconds": {
    "deposit": 24,
    "egress": 96,
    "swap": 12,
  },
  "fees": [],
  "fillOrKillParams": {
    "minPrice": "0",
    "refundAddress": "0x541f563237a309b3a61e33bdf07a8930bdba8d99",
    "retryDurationBlocks": 3,
  },
  "lastStatechainUpdateAt": 1640995200000,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "RECEIVING",
}
`;
